objects/WebID__c.object
<CustomObject>
    <fields>
        <fullName>OEM_Area__c</fullName>
        <label>OEM Area</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OEM_Hidden__c</fullName>
        <description>Use for OEM Field</description>
        <label>OEM Hidden</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OEM__c</fullName>
        <description>Workflow rule use to update OEM_Hidden__c.</description>
        <formula>OEM_Hidden__c</formula>
        <label>OEM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OMS_DAP_Goals__c</fullName>
        <label>Dealer DAP Goals</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OMS_Geography__c</fullName>
        <label>OMS Geography</label>
        <picklist>
            <picklistValues>
                <fullName>DMA Targeted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radius Targeted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OMS_Taglines__c</fullName>
        <label>OMS Taglines</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Offline_Other_Media__c</fullName>
        <label>Offline/Other Media</label>
        <picklist>
            <picklistValues>
                <fullName>TV ad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio ad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Print – newspaper, direct mail,</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outdoor – Billboards, digital, poster</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3rd Party Paid Search</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3rd Party Display</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Online_Marketing_Specialist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Digital Advertising Analyst</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Website1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OwnerMktg_Specialist_lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Email Marketing Specialist</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Website2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Owner_Marketing_DAP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field lists the Email Marketing  Specialist assigned if the account has DAP but no AA.</description>
        <inlineHelpText>This field lists the Email Marketing  Specialist assigned if the account has DAP but no AA.</inlineHelpText>
        <label>Email Marketing (DAP)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>webID2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Owner_Marketing_Id__c</fullName>
        <label>Email Marketing ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Marketing_Product__c</fullName>
        <label>Email Marketing Product</label>
        <summaryFilterItems>
            <field>Installed_Base__c.Item_Category_Segment1__c</field>
            <operation>contains</operation>
            <value>OnStation</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Installed_Base__c.Product_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </summaryFilterItems>
        <summaryForeignKey>Installed_Base__c.WebID__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Owner_Marketing_Specialist__c</fullName>
        <label>Email Marketing Specialist</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_of_Dealer_Group__c</fullName>
        <inlineHelpText>Example: &quot;This dealership is part of a Excellence Dealer Group and has three sister stores - Excellence 1, Excellence 2 and Excellence 3&quot;</inlineHelpText>
        <label>Part of Dealer Group?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Performance_Improvement_Consultant__c</fullName>
        <formula>Account__r.Performance_Improvement_Consultant_User__r.FirstName &amp; &quot; &quot; &amp; Account__r.Performance_Improvement_Consultant_User__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Performance Improvement Consultant</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Performance_Solution_Start_Date1__c</fullName>
        <inlineHelpText>Shows the most recent start date of the Performance Solution product in the WebId&apos;s Installed Base.</inlineHelpText>
        <label>Performance Solution Start Date1</label>
        <summarizedField>Installed_Base__c.Start_Date__c</summarizedField>
        <summaryFilterItems>
            <field>Installed_Base__c.Product_Code__c</field>
            <operation>equals</operation>
            <value>46.369.00</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Installed_Base__c.Product_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </summaryFilterItems>
        <summaryForeignKey>Installed_Base__c.WebID__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Performance_Solution_Start_Date__c</fullName>
        <formula>IF( Performance_Solution_Start_Date1__c &lt;= Date(2013,6,10), Date(2013,6,10), Performance_Solution_Start_Date1__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Shows the start date of the Performance Solution product in the Installed Base.  If this is blank then the WebId does not have the Performance Solution.</inlineHelpText>
        <label>Performance Solution Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Polk_Brand_Radius__c</fullName>
        <description>Polk Report Brand and Radius</description>
        <inlineHelpText>Polk Report Brand and Radius. Information should be maintained in both DAP and SF.</inlineHelpText>
        <label>Polk Brand/Radius</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Polk_Flag__c</fullName>
        <description>Polk Report flag for PowerBrand. Informational only. Flag maintained in DAP tool.</description>
        <inlineHelpText>Polk Report flag. Flag should be maintained in DAP tool.</inlineHelpText>
        <label>Polk Flag</label>
        <picklist>
            <picklistValues>
                <fullName>N/A</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PowerSEO_Help_List_Description__c</fullName>
        <label>PowerSEO Help List Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PowerSEO_Help_List_Manager_Comments__c</fullName>
        <label>PowerSEO Help List Manager Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PowerSEO_Help_List_Reason__c</fullName>
        <label>PowerSEO Help List Reason</label>
        <picklist>
            <picklistValues>
                <fullName>3rd Party/Competitor Interference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not competitive with other dealers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer says Sales misrepresented product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealership Personnel Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disengaged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plan to move money to a different product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pricing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reporting – Inability to Demonstrate ROI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reporting – Lack of Transparency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ROI – results not good enough</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Voiced Ranking Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Voiced Traffic Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unrealistic Expectations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cobalt is secondary domain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Down at Dealership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Teaming Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leaving Cobalt entirely</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PowerSEO_Help_List__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PowerSEO Help List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PowerSEO_Product__c</fullName>
        <label>PowerSEO Product</label>
        <summaryFilterItems>
            <field>Installed_Base__c.Product_Description__c</field>
            <operation>contains</operation>
            <value>SEO</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Installed_Base__c.Product_Description__c</field>
            <operation>notContain</operation>
            <value>SEO Essentials</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Installed_Base__c.Product_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Installed_Base__c.Product_Description__c</field>
            <operation>contains</operation>
            <value>Power</value>
        </summaryFilterItems>
        <summaryForeignKey>Installed_Base__c.WebID__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Power_Site__c</fullName>
        <label>PowerSite Level of Service</label>
        <summaryFilterItems>
            <field>Installed_Base__c.Product_Description__c</field>
            <operation>contains</operation>
            <value>PowerSite, GM PowerSite, GM Dealer Website, Design Differentiator Pak</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Installed_Base__c.Product_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </summaryFilterItems>
        <summaryForeignKey>Installed_Base__c.WebID__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Primary_Website_Vendor__c</fullName>
        <label>Primary Website Vendor</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box when the Cobalt website is the dealer&apos;s primary website. Leave flag unchecked if the site is secondary.</inlineHelpText>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProCare_Gold__c</fullName>
        <description>This field is not intended to show up on the page layout.</description>
        <inlineHelpText>This is calculated from the Installed base.</inlineHelpText>
        <label>ProCare Gold</label>
        <summaryFilterItems>
            <field>Installed_Base__c.Product_Code__c</field>
            <operation>equals</operation>
            <value>14.501.00</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Installed_Base__c.Product_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </summaryFilterItems>
        <summaryForeignKey>Installed_Base__c.WebID__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ProCare_Silver__c</fullName>
        <description>This is not intended for display on the page layout.</description>
        <label>ProCare Silver</label>
        <summaryFilterItems>
            <field>Installed_Base__c.Product_Code__c</field>
            <operation>equals</operation>
            <value>14.500.00</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Installed_Base__c.Product_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </summaryFilterItems>
        <summaryForeignKey>Installed_Base__c.WebID__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Procare_Product__c</fullName>
        <label>Procare Product</label>
        <summaryFilterItems>
            <field>Installed_Base__c.Product_Description__c</field>
            <operation>contains</operation>
            <value>ProCare, Proactive, PowerSearch Complete</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Installed_Base__c.Product_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </summaryFilterItems>
        <summaryForeignKey>Installed_Base__c.WebID__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Quarterly_Call_Schedule__c</fullName>
        <label>Quarterly Call Schedule</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Radius__c</fullName>
        <label>Radius</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RepMan_Help_List_Date__c</fullName>
        <label>RepMan Help List Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RepMan_Help_List_Description__c</fullName>
        <label>RepMan Help List Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RepMan_Help_List_Manager_Comments__c</fullName>
        <label>RepMan Help List Manager Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RepMan_Help_List_Reason__c</fullName>
        <label>RepMan Help List Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Competitive Displacement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Collection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google Places Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-engagement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEM Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEM Surveys</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ROI - results not good enough</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RepMan_Help_List__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RepMan Help List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RepMan_Welcome_Kit_Tracking__c</fullName>
        <description>This field contains the tracking # for the Welcome Kit that was sent when the dealer ordered RepMan</description>
        <label>RepMan Welcome Kit Tracking #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reputation_Management_Specialist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reputation Management Specialist</label>
        <referenceTo>User</referenceTo>
        <relationshipName>WebIDs2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Restricted_GEO_s__c</fullName>
        <description>The ones you CANNOT go after. These are either not in dealer’s DMA or have been removed due to little success/traffic.</description>
        <inlineHelpText>The GEOs the dealer has asked us not to target.</inlineHelpText>
        <label>Dealer Restricted GEOs</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Review_Protocols__c</fullName>
        <description>This is a field for RMS section of WebId</description>
        <inlineHelpText>Describe the protocols for responding to negative reviews.</inlineHelpText>
        <label>Review Protocols</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SEO_Decision_Made_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the name of the person at the dealership who informed ADP/Cobalt that they will be using a 3rd Party or internal person for SEO.</inlineHelpText>
        <label>SEO Decision Made By</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please select a Contact against the WebID&apos;s Account.</errorMessage>
            <filterItems>
                <field>$Source.Account__c</field>
                <operation>equals</operation>
                <valueField>Contact.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>WebIDs</relationshipLabel>
        <relationshipName>WebIDs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SEO_Essentials__c</fullName>
        <label>SEO Essentials</label>
        <summaryFilterItems>
            <field>Installed_Base__c.Product_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Installed_Base__c.Product_Description__c</field>
            <operation>contains</operation>
            <value>SEO Essentials, Enhanced SEO, Audience Management Package, GM Canada ProCare,VW Digital Core Package</value>
        </summaryFilterItems>
        <summaryForeignKey>Installed_Base__c.WebID__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SEO_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If this account uses a 3rd party or an internal person for their SEO, please have your manager check this box and provide the name of the person at the dealership who has informed you of this decision.</inlineHelpText>
        <label>SEO – Dealer/3rd Party</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SEO_Specialist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SEO Specialist</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Websites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SEO_Targeted_Geographies__c</fullName>
        <description>The ones you ARE going after</description>
        <inlineHelpText>The GEOs that are currently part of the SEO strategy.</inlineHelpText>
        <label>Currently Targeted GEOs</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SEO_Website_Scan_Tool_URL__c</fullName>
        <label>SEO: Website Scan Tool URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Sales_Process__c</fullName>
        <inlineHelpText>What is the dealer&apos;s sales process? (Examples: one price, no hassle, defined customer friendly sales process, etc)</inlineHelpText>
        <label>Sales Process</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Service_Parts_Pages__c</fullName>
        <label>Service &amp; Parts Pages</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Site_ID__c</fullName>
        <label>Site ID</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Social_Media_Specialist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Social Media Representative</label>
        <referenceTo>User</referenceTo>
        <relationshipName>WebIDs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Social_Rep_Mgmt_Product__c</fullName>
        <formula>IF( Account__r.Social_Rep_Mgmt_Product__c = 0, 0, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This will show a 0 if there are no Social or Reputation Management products on this account.  If this account has Social or Reputation Management products this will field will show a 1.</inlineHelpText>
        <label>Social/Rep Mgmt Product</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Social_Service__c</fullName>
        <label>Social Service Type</label>
        <picklist>
            <picklistValues>
                <fullName>Full Voice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Additional Franchise Voice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Rater Only</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Taglines__c</fullName>
        <inlineHelpText>Dealer Taglines or Slogans</inlineHelpText>
        <label>Taglines</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Type_of_Site__c</fullName>
        <label>Type of Site</label>
        <picklist>
            <picklistValues>
                <fullName>Jump Site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cobalt Site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Cobalt site</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>URL_Offline_Other_Marketing__c</fullName>
        <inlineHelpText>URL example is a jump site. Could be different from web-id URL such as http://www.sutliffauto.com/</inlineHelpText>
        <label>URL Offline/Other Marketing</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Used_Vehicle_Sales_Target__c</fullName>
        <label>Used Vehicle Sales Target</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Used_Vehicle_Sales__c</fullName>
        <inlineHelpText>Number of used vehicles sold per month</inlineHelpText>
        <label># Used Vehicle Sales/Month</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Name__c</fullName>
        <label>User Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VIP_Reason_Primary__c</fullName>
        <formula>Account__r.VIP_Reason_Primary_Text__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VIP Reason</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VIP_Reason_Secondary__c</fullName>
        <formula>Account__r.VIP_Reason_Secondary_Text__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VIP Reason Detail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VIP__c</fullName>
        <formula>Account__r.VIP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VIP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VWCare_Product__c</fullName>
        <label>VWCare Product</label>
        <summarizedField>Installed_Base__c.Quantity__c</summarizedField>
        <summaryFilterItems>
            <field>Installed_Base__c.Product_Description__c</field>
            <operation>equals</operation>
            <value>VW Care</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Installed_Base__c.Product_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </summaryFilterItems>
        <summaryForeignKey>Installed_Base__c.WebID__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Vanity_URL__c</fullName>
        <label>Vanity URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Webmaster_Tools_Login_Submitted_to__c</fullName>
        <description>Select Webmaster Tools Login</description>
        <inlineHelpText>Select Webmaster Tools Login</inlineHelpText>
        <label>Webmaster Tools Login Submitted to</label>
        <picklist>
            <picklistValues>
                <fullName>procareseo2@yahoo.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>procareseo3@yahoo.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>procareseo4@yahoo.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>procareseo5@yahoo.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>procareseo6@yahoo.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>procareseo7@yahoo.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>procareseo8@yahoo.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>procareseo9@yahoo.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>procareseo10@yahoo.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>procareseo11@yahoo.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>procareseo12@yahoo.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>procareseo13@yahoo.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>procareseo14@yahoo.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>procareseo15@yahoo.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>procareseo16@yahoo.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>procareseo17@yahoo.com</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Webnum__c</fullName>
        <label>Webnum</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website_Goals__c</fullName>
        <inlineHelpText>Primary Goals for website. Note: Must be specific and measurable. (I.E. Increase phone calls, emails, sales, etc)</inlineHelpText>
        <label>Website Goals</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Website_Scan_Tool_URL__c</fullName>
        <label>AA: Website Scan Tool URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>X5_Star_Review_Last_Update__c</fullName>
        <label>5 Star Review Last Update</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X5_Star_Reviews1__c</fullName>
        <description>RMS enters Review for DAA to use in 5 Star DAP Ads</description>
        <inlineHelpText>RMS enters Review for DAA to use in 5 Star DAP Ads</inlineHelpText>
        <label>5 Star Reviews</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>X5_Star_Reviews2__c</fullName>
        <description>RMS enters Review for DAA to use in 5 Star DAP Ads</description>
        <inlineHelpText>RMS enters Review for DAA to use in 5 Star DAP Ads</inlineHelpText>
        <label>5 Star Reviews</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>X5_Star_Reviews__c</fullName>
        <description>RMS enters Review for DAA to use in 5 Star DAP Ads</description>
        <inlineHelpText>RMS enters Review for DAA to use in 5 Star DAP Ads</inlineHelpText>
        <label>5 Star Reviews</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>X5_Star_Video_Last_Update__c</fullName>
        <label>5 Star Video Last Update</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X5_Star_Video_Link__c</fullName>
        <inlineHelpText>Link to mapped network drive to video for dealership.</inlineHelpText>
        <label>5 Star Video Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>X5_Star_Video_Text__c</fullName>
        <inlineHelpText>Recommended text for use in video creation. Character limit of 255.</inlineHelpText>
        <label>5 Star Video Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <description>Pulls account zip code</description>
        <formula>Account__r.CBLTZip__c</formula>
        <inlineHelpText>Account Zip Code. Used as the Dealer&apos;s OOS password.</inlineHelpText>
        <label>Zip Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eAppend_Group__c</fullName>
        <formula>IF(OR( 

BEGINS( Account__r.Name , &quot;A&quot;), BEGINS(Account__r.Name, &quot;B&quot;), BEGINS(Account__r.Name, &quot;C&quot;), BEGINS(Account__r.Name, &quot;D&quot;), BEGINS(Account__r.Name, &quot;E&quot;), BEGINS(Account__r.Name, &quot;F&quot;), BEGINS(Account__r.Name, &quot;G&quot;), BEGINS(Account__r.Name, &quot;H&quot;) , BEGINS(Account__r.Name, &quot;I&quot;), BEGINS(Account__r.Name, &quot;J&quot;), BEGINS(Account__r.Name, &quot;K&quot;), BEGINS(Account__r.Name, &quot;L&quot;) ), &quot;A&quot; ,&quot;B&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>eAppend Group</label>
        <type>Text</type>
    </fields>
    <label>WebID</label>
    <listViews>
        <fullName>My_WebId_s_AA</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Primary__c</columns>
        <columns>Dealer_Group_Name__c</columns>
        <columns>DA_Help_List__c</columns>
        <columns>DA_Help_List_Reason__c</columns>
        <columns>Account_Executive__c</columns>
        <columns>SEO_Specialist__c</columns>
        <columns>Online_Marketing_Specialist__c</columns>
        <columns>OwnerMktg_Specialist_lookup__c</columns>
        <columns>Social_Rep_Mgmt_Product__c</columns>
        <columns>Reputation_Management_Specialist__c</columns>
        <columns>Social_Media_Specialist__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Current_User_Is_Advocate__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <label>My WebId&apos;s - AA</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>AccountAdvocateDirector</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_WebId_s_OMS</fullName>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>Dealer_Group_Name__c</columns>
        <columns>DA_Help_List__c</columns>
        <columns>DA_Help_List_Reason__c</columns>
        <columns>Account_Executive__c</columns>
        <columns>Account_Advocate__c</columns>
        <columns>SEO_Specialist__c</columns>
        <columns>OwnerMktg_Specialist_lookup__c</columns>
        <columns>Social_Rep_Mgmt_Product__c</columns>
        <columns>Reputation_Management_Specialist__c</columns>
        <columns>Social_Media_Specialist__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Current_User_Is_OMS__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <label>My WebId&apos;s - OMS</label>
        <sharedTo>
            <role>DigitalMarketingServicesDirector</role>
            <roleAndSubordinates>OnlineMarketingManager</roleAndSubordinates>
        </sharedTo>
    </listViews>
</CustomObject>